--- a/styles.css
+++ b/styles.css
@@ -7,8 +7,8 @@
 
 body {
     font-family: 'Roboto', sans-serif;
-    background-color: #f0f4f8; /* Light grey-blue for contrast */
-    color: #222; /* Dark text for easy readability */
+    background-color: #282b2e; /* Light grey-blue for contrast */
+    color: #ffffff; /* Dark text for easy readability */
     line-height: 1.6;
 }
 
